--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
         <h4>BY LAUFY</h4>
         <a href="https://www.youtube.com/watch?v=obLSGG-oEyw"
         target="_blank"
-        TITLE="VIDEO LINK" alt="Album Cover" width="300">
+        TITLE="VIDEO LINK" ">
         ORIGINAL VIDEO   
         </a>
         <br><br>
         <a href="https://www.youtube.com/watch?v=obLSGG-oEyw"
         target="_blank">
-        <img src="images/images.jpg"
-        height="150"
-        alt="ALBUM COVER">
+        <img src="images/images.jpg" alt="Album Cover" width="300">
         </a>
         <hr>
         <pre>
@@ -64,4 +62,5 @@
         </pre>
     </body>
 </html>
+
 
