--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <br><br>
         <a href="https://www.youtube.com/watch?v=obLSGG-oEyw"
         target="_blank">
-        <img src="https://i.scdn.co/image/ab67616d0000b2735rMOCuiWWbEBcHaKM69Hmv" alt="Laufey — A Matter of Time Album Cover" width="300">
+       <img src="https://upload.wikimedia.org/wikipedia/en/e/ed/Laufey_-_A_Matter_of_Time.png" 
+       alt="Laufey - A Matter of Time Album Cover" 
+       width="300">
+        </a>
         <pre>
     This skyscraper's causing vertigo
     The countdown begins in Tokyo
@@ -60,6 +63,7 @@
         </pre>
     </body>
 </html>
+
 
 
 
